<resources>
    <string name="app_name">Mnist App</string>
    <string name="prediction">Prediction</string>
    <string name="probability">Probability</string>
    <string name="timecost">Timecost</string>
    <string name="empty">Empty</string>
    <string name="detect">Detect</string>
    <string name="clear">Clear</string>
    <string name="score">Score</string>
    <string name="next">Next</string>
    <string name="clear_all">Clear All</string>
    <string name="space">Space</string>
    <string name="txt_message">Text Message</string>
    <string name="error">Error</string>
    <string name="example">Example</string>
    <string name="type">Type</string>
    <string name="definition">Definition</string>
    <string name="search">Search</string>
</resources>
